--- a/LeetCode/LeetCode/LeetCode.vcxproj
+++ b/LeetCode/LeetCode/LeetCode.vcxproj
@@ -147,7 +147,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="LeetCode.cpp" />
+    <ClCompile Include="LeetCode 198.cpp" />
+    <ClCompile Include="LeetCode 985.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
