--- a/LeetCode/LeetCode/LeetCode.vcxproj.filters
+++ b/LeetCode/LeetCode/LeetCode.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="LeetCode 198.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="LeetCode 633.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
