--- a/LeetCode/LeetCode/LeetCode.vcxproj
+++ b/LeetCode/LeetCode/LeetCode.vcxproj
@@ -148,6 +148,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="LeetCode 198.cpp" />
+    <ClCompile Include="LeetCode 121.cpp" />
     <ClCompile Include="LeetCode 633.cpp" />
     <ClCompile Include="LeetCode 985.cpp" />
   </ItemGroup>
