--- a/2020.9/2020.9.vcxproj.filters
+++ b/2020.9/2020.9.vcxproj.filters
@@ -15,7 +15,19 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="2020.9.24.cpp">
+    <ClCompile Include="LeetCode 121.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="LeetCode 198.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="LeetCode 387.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="LeetCode 633.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="LeetCode 985.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
