--- a/2020.9/2020.9.vcxproj
+++ b/2020.9/2020.9.vcxproj
@@ -18,11 +18,18 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="LeetCode 121.cpp" />
+    <ClCompile Include="LeetCode 198.cpp" />
+    <ClCompile Include="LeetCode 387.cpp" />
+    <ClCompile Include="LeetCode 633.cpp" />
+    <ClCompile Include="LeetCode 985.cpp" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{315ee907-73e9-4d24-91cd-7df229d84ad9}</ProjectGuid>
-    <RootNamespace>My2020924</RootNamespace>
+    <ProjectGuid>{bae62e8b-e193-45d8-ba3b-e22c50cf1404}</ProjectGuid>
+    <RootNamespace>My20209</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -138,9 +145,6 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClCompile Include="2020.9.24.cpp" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
